# netbox-packer

./: .gitignore  404.html  AGENTS.md  CERTIFICATION.md  CLAUDE.md  COMPATIBILITY.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.gitea/workflows/: deploy-production.yml
.github/ci/: netbox46-source-test.sh
.github/workflows/: ci.yml  docs-screenshots.yml  docs.yml  e2e.yml  page-coverage.yml  publish-pypi.yml
certification/: index.html
cloud-init-template-images/: index.html
configuration/: index.html
docs/: certification.md  cloud-init-template-images.md  configuration.md  index.md  installation.md  models.md  roadmap.md
docs/release-notes/: index.md  version-0.0.2.post2.md  version-0.0.5.md
installation/: index.html
models/: index.html
netbox_packer/: __init__.py  choices.py  filtersets.py  forms.py  hcp_sync.py  jobs.py  models.py  navigation.py  proxbox_client.py  search.py  sitemap.py  tables.py  template_content.py  urls.py  validators.py  views.py
netbox_packer/api/: serializers.py  urls.py  views.py
netbox_packer/graphql/: __init__.py  schema.py  types.py
netbox_packer/management/commands/: check_packer_staleness.py  import_installer_config.py
netbox_packer/migrations/: 0001_initial.py  0002_vm_lineage_custom_field.py  0003_packer_plugin_settings.py  0004_packerpluginsettings_tags_and_more.py  0004_proxbox_api_settings.py  0005_packerpluginsettings_proxbox_api.py  0005_packerpluginsettings_tags_and_more.py  0006_seed_zabbix_cloud_init.py  0007_seed_influxdb_cloud_init.py  0008_packertemplate_monitoring_agents.py  0009_seed_kubernetes_cloud_init.py  0010_alter_packertemplate_zabbix_server.py  0010_seed_k8s_role_templates.py  0011_seed_k8s_role_templates.py  0011_seed_powerdns_cloud_init.py  0012_seed_powerdns_cloud_init.py  0013_seed_powerdns_auth_recursor_cloud_init.py  0013_seed_windows11.py  0014_seed_fileserver_allinone_cloud_init.py  0015_seed_passbolt_cloud_init.py  0015_seed_ubuntu_lts_base_cloud_init.py  0016_seed_ubuntu_lts_base_cloud_init.py
netbox_packer/models/: build.py
netbox_packer/packer_templates/: windows-11-proxmox.pkr.hcl
netbox_packer/packer_templates/windows-11/: autounattend.xml.tpl
netbox_packer/packer_templates/windows-11/scripts/: install-cloudbase-init.ps1  sysprep.ps1
netbox_packer/seeds/: passbolt-ce-ubuntu-2404.cloud-config.yaml  tpl-fileserver-allinone.cloud-config.yaml
netbox_packer/services/: branch_lifecycle.py  http_client.py
netbox_packer/static/netbox_packer/: os_version_filter.js
netbox_packer/templates/netbox_packer/: home.html  packerbuild.html  packerbuildtarget.html  packerinstallerconfig.html  packertemplate.html
netbox_packer/templates/netbox_packer/inc/: create_instance_button.html
netbox_packer/tests/: test_forms.py
release-notes/: index.html
release-notes/version-0.0.2.post2/: index.html
release-notes/version-0.0.5/: index.html
roadmap/: index.html
scripts/: capture_screenshots.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/certification/: index.html
site/cloud-init-template-images/: index.html
site/configuration/: index.html
site/installation/: index.html
site/models/: index.html
site/release-notes/: index.html
site/release-notes/version-0.0.2.post2/: index.html
site/roadmap/: index.html
site/search/: search_index.json
tests/: conftest.py  netbox_test_configuration.py  test_build_dispatch_behavior.py  test_cloud_config_build_static.py  test_package.py  test_packer_api.py  test_packer_models.py  test_packer_views.py  test_plugin_structure_static.py  test_proxbox_integration.py
tests/e2e/: page_coverage_check.py
