[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-packer"
version = "0.0.2.post1"
requires-python = ">=3.12.0"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0.0",
]
authors = [
    {name = "Emerson Felipe", email = "emersonfelipe.2003@gmail.com"},
]
description = "NetBox plugin for managing Packer VM template builds and catalog"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.0.0",
]
screenshot = [
    "playwright>=1.58.0",
    "requests>=2.33.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_packer*"]

[tool.setuptools.package-data]
netbox_packer = [
    "templates/**",
    "static/**",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-django>=4.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["B008", "B904", "ARG001", "ARG002"]
